Finish Layout and Routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,20 @@
     <html>
       <head>
         <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
-        <%= stylesheet_link_tag    "application", :media => "all" %>
-        <%= javascript_include_tag "application" %>
+        <%= stylesheet_link_tag 'application', media: 'all',
+                                               'data-turbolinks-track' => true %>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
         <%= csrf_meta_tags %>
+        <!--[if lt IE 9]>
+          <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+          </script>
+        <![endif]-->
       </head>
       <body>
-        <%= yield %>
+        <%= render 'layouts/header' %>    <!-- NEW LINE -->
+        <div class="container">
+          <%= yield %>
+          <%= render 'layouts/footer' %>    <!-- NEW LINE -->
+        </div>
       </body>
     </html>
