--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,11 @@
       <body>
         <%= render 'layouts/header' %>    <!-- NEW LINE -->
         <div class="container">
+        
+        <% flash.each do |message_type, message| %>    <!-- START NEW CODE  -->
+            <div class="alert alert-<%= message_type %>"><%= message %></div>
+          <% end %>                                      <!-- END NEW CODE  -->
+
           <%= yield %>
           <%= render 'layouts/footer' %>    <!-- NEW LINE -->
           <%= debug(params) if Rails.env.development? %>    <!--NEW LINE -->
