--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,189 +1,188 @@
 @import "bootstrap-sprockets";
-    @import "bootstrap";
+@import "bootstrap";
 
-    /* mixins, variables, etc. */
+/* mixins, variables, etc. */
 
-    $gray-medium-light: #eaeaea;
+$gray-medium-light: #eaeaea;
 
-    @mixin box_sizing {
-      -moz-box-sizing:    border-box;
-      -webkit-box-sizing: border-box;
-      box-sizing:         border-box;
-    }
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
-    /* universal */
+/* universal */
 
-    body {
-      padding-top: 60px;
-    }
+body {
+  padding-top: 60px;
+}
 
-    section {
-      overflow: auto;
-    }
+section {
+  overflow: auto;
+}
 
-    textarea {
-      resize: vertical;
-    }
+textarea {
+  resize: vertical;
+}
 
-    .center {
-      text-align: center;
-    }
+.center {
+  text-align: center;
+}
 
-    .center h1 {
-      margin-bottom: 10px;
-    }
+.center h1 {
+  margin-bottom: 10px;
+}
 
-    /* typography */
+/* typography */
 
-    h1, h2, h3, h4, h5, h6 {
-      line-height: 1;
-    }
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1;
+}
 
-    h1 {
-      font-size: 3em;
-      letter-spacing: -2px;
-      margin-bottom: 30px;
-      text-align: center;
-    }
+h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+}
 
-    h2 {
-      font-size: 1.2em;
-      letter-spacing: -1px;
-      margin-bottom: 30px;
-      text-align: center;
-      font-weight: normal;
-      color: #777;
-    }
+h2 {
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+  color: #777;
+}
 
-    p {
-      font-size: 1.1em;
-      line-height: 1.7em;
-    }
+p {
+  font-size: 1.1em;
+  line-height: 1.7em;
+}
 
-    /* header */
+/* header */
 
-    #logo {
-      float: left;
-      margin-right: 10px;
-      font-size: 1.7em;
-      color: #fff;
-      text-transform: uppercase;
-      letter-spacing: -1px;
-      padding-top: 9px;
-      font-weight: bold;
-    }
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+}
 
-    #logo:hover {
-      color: #fff;
-      text-decoration: none;
-    }
+#logo:hover {
+  color: #fff;
+  text-decoration: none;
+}
 
 /* footer */
 
-    footer {
-      margin-top: 45px;
-      padding-top: 5px;
-      border-top: 1px solid #eaeaea;
-      color: #777;
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+
+footer a {
+  color: #555;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 15px;
+}
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+}
+
+/* sidebar */
+
+aside {
+  section.user_info {
+    margin-top: 20px;
+  }
+  section {
+    padding: 10px 0;
+    margin-top: 20px;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
     }
-
-    footer a {
-      color: #555;
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
     }
-
-    footer a:hover {
-      color: #222;
+    h1 {
+      font-size: 1.4em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+      margin-top: 0px;
     }
+  }
+}
 
-    footer small {
-      float: left;
-    }
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
 
-    footer ul {
-      float: right;
-      list-style: none;
-    }
+.gravatar_edit {
+  margin-top: 15px;
+}
 
-    footer ul li {
-      float: left;
-      margin-left: 15px;
-    }
+/* forms */
 
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
 
-    /* miscellaneous */
+input {
+  height: auto !important;
+}
 
-    .debug_dump {
-      clear: both;
-      float: left;
-      width: 100%;
-      margin-top: 45px;
-      @include box_sizing;
-    }
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
 
-    /* sidebar */
-
-    aside {
-      section.user_info {
-        margin-top: 20px;
-      }
-      section {
-        padding: 10px 0;
-        margin-top: 20px;
-        &:first-child {
-          border: 0;
-          padding-top: 0;
-        }
-        span {
-          display: block;
-          margin-bottom: 3px;
-          line-height: 1;
-        }
-        h1 {
-          font-size: 1.4em;
-          text-align: left;
-          letter-spacing: -1px;
-          margin-bottom: 3px;
-          margin-top: 0px;
-        }
-      }
-    }
-
-    .gravatar {
-      float: left;
-      margin-right: 10px;
-    }
-
-    .gravatar_edit {
-      margin-top: 15px;
-    }
-
-    /* forms */
-
-    input, textarea, select, .uneditable-input {
-      border: 1px solid #bbb;
-      width: 100%;
-      margin-bottom: 15px;
-      @include box_sizing;
-    }
-
-    input {
-      height: auto !important;
-    }
-
-    #error_explanation {
-      color: red;
-      ul {
-        color: red;
-        margin: 0 0 30px 0;
-      }
-    }
-
-    .field_with_errors {
-      @extend .has-error;
-      .form-control {
-        color: $state-danger-text;
-      }
-    }
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
 
 .checkbox {
   margin-top: -10px;
@@ -197,4 +196,16 @@
 #session_remember_me {
   width: auto;
   margin-left: 0;
+}
+
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
+  }
 }
