Complete Redesign of Projects and Users Screens.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -71,6 +71,7 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+
 }
 
 #logo:hover {
@@ -85,6 +86,21 @@ footer {
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #777;
+}
+
+.footer {
+  padding: 20px;
+  background-color: #464745;
+  /*border-top: #eeeeee 20px solid;*/
+  /*border-bottom: #eeeeee 20px solid;*/
+  color: #FFFFFF;
+  height: 280px;
+  width: 1140px;
+  margin: 0px auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
 }
 
 footer a {
@@ -150,6 +166,7 @@ aside {
 .gravatar {
   float: left;
   margin-right: 10px;
+  height: 50px;
 }
 
 .gravatar_edit {
@@ -209,3 +226,131 @@ input {
     border-bottom: 1px solid $gray-lighter;
   }
 }
+
+/* projects */
+
+.projects {
+  list-style: none;
+  padding: 0;
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+  .user {
+    margin-top: 5em;
+    padding-top: 0;
+  }
+  .content {
+    display: block;
+    margin-left: 60px;
+    img {
+      display: block;
+      padding: 5px 0;
+    }
+  }
+  .timestamp {
+    color: $gray-light;
+    display: block;
+    margin-left: 60px;
+  }
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+    margin-top: 5px;
+    height: 50px;
+  }
+}
+
+aside {
+  textarea {
+    height: 105px;
+    margin-bottom: 5px;
+  }
+}
+
+span.picture {
+  margin-top: 10px;
+  input {
+    border: 0;
+  }
+}
+
+/* projects */
+
+.posts {
+  list-style: none;
+  padding: 0;
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+  .user {
+    margin-top: 5em;
+    padding-top: 0;
+  }
+  .content {
+    display: block;
+    margin-left: 60px;
+    img {
+      display: block;
+      padding: 5px 0;
+    }
+  }
+  .timestamp {
+    color: $gray-light;
+    display: block;
+    margin-left: 60px;
+  }
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+    margin-top: 5px;
+    height: 50px;
+  }
+}
+
+aside {
+  textarea {
+    height: 105px;
+    margin-bottom: 5px;
+  }
+}
+
+span.picture {
+  margin-top: 10px;
+  input {
+    border: 0;
+  }
+}
+
+.home-screen{
+
+  border: #dddddd 1px solid;
+  padding: 10px;
+  min-height: 1000px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  margin-top: 20px;
+
+}
+
+.navbar-inverse{
+
+  background-color: #26ae90;
+
+}
+
+.navbar-inverse .navbar-nav > li > a {
+  color: #FFFFFF;
+}
+
+.navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-brand:focus {
+  color: #777;
+}
+
+#logo{
+
+  padding-top: 15px;
+
+}
+
