--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,14 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+           <%= link_to "college planner", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", help_path %></li>
+
+        <!--<li><%= link_to "Help", help_path %></li>-->
         <% if logged_in? %>
-            <li><%= link_to "Users", users_path %></li>
+            <li><%= link_to image_tag("add.png"), root_path %></li>
+            <li><%= link_to image_tag("users.png"), users_path %></li>
+            <li><%= link_to image_tag("account.png"), users_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
@@ -19,7 +21,7 @@
               </ul>
             </li>
         <% else %>
-            <li><%= link_to "Log in", login_path %></li>
+            <li><%= link_to image_tag("account.png"), login_path %></li>
         <% end %>
       </ul>
     </nav>
