--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,15 +1,29 @@
-<% provide(:title, 'Home') %>
-    <div class="center jumbotron">
-      <h1>Welcome to the Sample App</h1>
+<div class="home-screen">
 
-      <h2>
-        This is the home page for the
-        <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-        sample application.
-      </h2>
 
-      <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-    </div>      <!--  CHANGED LINE -->
 
-    <%= link_to image_tag("rails.png", alt: "Rails logo"),
-                'http://rubyonrails.org/' %>
+<% if logged_in? %>
+    <div class="row">
+      <!--<aside class="col-md-12">-->
+        <!--<section class="user_info">-->
+          <!--&lt;!&ndash;<%= render 'shared/user_info' %>&ndash;&gt;-->
+        <!--</section>-->
+        <!--<section class="project_form">-->
+          <!--&lt;!&ndash;<%= render 'shared/project_form' %>&ndash;&gt;-->
+        <!--</section>-->
+      <!--</aside>-->
+      <div class="col-md-12">
+        <!--<h3>Project Feed</h3>-->
+        <%= render 'shared/feed' %>
+      </div>
+    </div>
+<% else %>
+
+
+
+
+
+
+<% end %>
+
+</div>
