--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,11 @@
 <% provide(:title, 'All users') %>
-<h1>All users</h1>
 
-<%= will_paginate %>
+<div class="home-screen">
 
 <ul class="users">
   <%= render @users %>
 </ul>
 
 <%= will_paginate %>
+
+    </div>
