--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -149,7 +149,7 @@ aside {
       padding-top: 0;
     }
     span {
-      display: block;
+      //display: block;
       margin-bottom: 3px;
       line-height: 1;
     }
@@ -275,7 +275,9 @@ span.picture {
   }
 }
 
-/* projects */
+
+
+/* posts */
 
 .posts {
   list-style: none;
@@ -302,26 +304,14 @@ span.picture {
     margin-left: 60px;
   }
   .gravatar {
-    float: left;
-    margin-right: 10px;
-    margin-top: 5px;
-    height: 50px;
+    //float: left;
+    //margin-right: 10px;
+    //margin-top: 5px;
+    //height: 50px;
   }
 }
 
-aside {
-  textarea {
-    height: 105px;
-    margin-bottom: 5px;
-  }
-}
 
-span.picture {
-  margin-top: 10px;
-  input {
-    border: 0;
-  }
-}
 
 .home-screen{
 
@@ -351,6 +341,34 @@ span.picture {
 #logo{
 
   padding-top: 15px;
+
+}
+
+.toggle-button-profile{
+
+  width: 98%;
+  margin-bottom: 5px;
+
+
+}
+
+.profile-logout-button{
+
+  width: 98%;
+  margin-bottom: 5px;
+
+
+}
+
+.project-form{
+
+  display: none;
+
+}
+
+.edit-profile-form{
+
+  display: none;
 
 }
 
