--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,4 +1,16 @@
-<%= link_to gravatar_for(current_user), current_user %>
-<h1><%= current_user.name %></h1>
-<span><%= link_to "view my profile", current_user %></span>
-<span><%= pluralize(current_user.projects.count, "project") %></span>
+
+<div class="col-md-4">
+
+  <%= link_to gravatar_for(current_user), current_user %>
+  <h1><%= current_user.name %></h1>
+  <span><%= link_to "view my profile", current_user %></span>
+  <span><%= pluralize(current_user.projects.count, "project") %></span>
+
+</div>
+<div class="col-md-8">
+
+    AAA
+
+</div>
+
+
