--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,93 @@
+<script>
+    $(document).ready(function () {
+        $(".toggle-button-profile").click(function () {
+            $(".edit-profile-form").slideToggle();
+        });
+    });
+</script>
+
 <% provide(:title, @user.name) %>
-<div class="row">
-  <!--<aside class="col-md-4">-->
-    <!--<section class="user_info">-->
-      <!--<h1>-->
-        <!--<%= gravatar_for @user %>-->
-        <!--<%= @user.name %>-->
-      <!--</h1>-->
-    <!--</section>-->
-  <!--</aside>-->
-  <div class="col-md-12">
-    <% if @user.projects.any? %>
-        <h3>Projects (<%= @user.projects.count %>)</h3>
-        <ol class="projects">
-          <%= render @projects %>
-        </ol>
-        <%= will_paginate @projects %>
-    <% end %>
+
+<div class="home-screen">
+
+  <div class="row" style="text-align:center;">
+
+    <div class="col-md-6 "><a class="btn btn-warning toggle-button-profile"  role="button">Edit Profile</a></div>
+    <div class="col-md-6 "><%= button_to "Logout", logout_path, :class => "btn btn-danger profile-logout-button", :method => :delete  %></div>
+
   </div>
+
+  <div class="row">
+    <div class=" edit-profile-form">
+
+      <div class="col-md-6 ">
+        <%= form_for(@user) do |f| %>
+
+            <%= render 'shared/error_messages', object: f.object %>
+
+            <%= f.label :name %>
+            <%= f.text_field :name, class: 'form-control' %>
+
+            <%= f.label :email %>
+            <%= f.email_field :email, class: 'form-control' %>
+
+            <%= f.label :password %>
+            <%= f.password_field :password, class: 'form-control' %>
+
+            <%= f.label :password_confirmation, "Confirmation" %>
+            <%= f.password_field :password_confirmation, class: 'form-control' %>
+
+            <%= f.submit "Save changes", class: "btn btn-primary" %>
+        <% end %>
+
+        <div class="gravatar_edit">
+          <%= gravatar_for @user %>
+          <a href="http://gravatar.com/emails" target="_blank">change</a>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <%= form_for(@user) do |f| %>
+
+            <%= render 'shared/error_messages', object: f.object %>
+
+            <%= f.label :name %>
+            <%= f.text_field :name, class: 'form-control' %>
+
+            <%= f.label :email %>
+            <%= f.email_field :email, class: 'form-control' %>
+
+            <%= f.label :password %>
+            <%= f.password_field :password, class: 'form-control' %>
+
+            <%= f.label :password_confirmation, "Confirmation" %>
+            <%= f.password_field :password_confirmation, class: 'form-control' %>
+
+            <%= f.submit "Save changes", class: "btn btn-primary" %>
+        <% end %>
+
+        <div class="gravatar_edit">
+          <%= gravatar_for @user %>
+          <a href="http://gravatar.com/emails" target="_blank">change</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-12">
+      <% if @user.projects.any? %>
+          <h3>Projects (<%= @user.projects.count %>)</h3>
+          <ol class="projects">
+            <%= render @projects %>
+          </ol>
+          <%= will_paginate @projects %>
+      <% end %>
+    </div>
+  </div>
+
+
 </div>
+
+
