--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,30 +6,16 @@
     });
 </script>
 
-
-
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
            <%= link_to "college planner", root_path, id: "logo" , 'data-no-turbolink' => true %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
 
-        <!--<li><%= link_to "Help", help_path %></li>-->
         <% if logged_in? %>
             <li><%= link_to image_tag("add.png"), "#", 'data-no-turbolink' => true, class: "toggle-form" %></li>
-            <li><%= link_to image_tag("users.png"), users_path %></li>
-            <li><%= link_to image_tag("account.png"), current_user , 'data-no-turbolink' => true%></li>
-            <!--<li class="dropdown">-->
-              <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
-                <!--Account <b class="caret"></b>-->
-              <!--</a>-->
-              <!--<ul class="dropdown-menu">-->
-                <!--<li><%= link_to "Profile", current_user %></li>-->
-                <!--<li><%= link_to "Settings", edit_user_path(current_user) %></li>-->
-                <!--<li class="divider"></li>-->
-                <!--<li><%= link_to "Log out", logout_path, method: "delete" %></li>-->
-              <!--</ul>-->
-            <!--</li>-->
+            <% if current_user.admin? %><li><%= link_to image_tag("users.png"), users_path %></li><% end %>
+            <li><%= link_to image_tag("account.png"), current_user , 'data-no-turbolink' => true, class: "right-button-header" %></li>
         <% else %>
             <li><%= link_to image_tag("account.png"), login_path %></li>
         <% end %>
