--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,64 +12,54 @@
 
   <div class="row" style="text-align:center;">
 
-    <div class="col-md-6 "><a class="btn btn-warning toggle-button-profile"  role="button">Edit Profile</a></div>
-    <div class="col-md-6 "><%= button_to "Logout", logout_path, :class => "btn btn-danger profile-logout-button", :method => :delete  %></div>
+    <div class="col-md-6 "><a class="btn btn-warning toggle-button-profile" role="button">Edit Profile</a></div>
+    <div class="col-md-6 "><%= button_to "Logout", logout_path, :class => "btn btn-danger profile-logout-button", :method => :delete %></div>
 
   </div>
 
   <div class="row">
     <div class=" edit-profile-form">
 
-      <div class="col-md-6 ">
-        <%= form_for(@user) do |f| %>
+
+      <%= form_for(@user) do |f| %>
+          <div class="col-md-6 ">
+
 
             <%= render 'shared/error_messages', object: f.object %>
 
             <%= f.label :name %>
             <%= f.text_field :name, class: 'form-control' %>
 
-            <%= f.label :email %>
-            <%= f.email_field :email, class: 'form-control' %>
+
 
             <%= f.label :password %>
             <%= f.password_field :password, class: 'form-control' %>
 
-            <%= f.label :password_confirmation, "Confirmation" %>
-            <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-            <%= f.submit "Save changes", class: "btn btn-primary" %>
-        <% end %>
 
-        <div class="gravatar_edit">
-          <%= gravatar_for @user %>
-          <a href="http://gravatar.com/emails" target="_blank">change</a>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <%= form_for(@user) do |f| %>
 
-            <%= render 'shared/error_messages', object: f.object %>
 
-            <%= f.label :name %>
-            <%= f.text_field :name, class: 'form-control' %>
+
+            <!--<div class="gravatar_edit">-->
+            <!--<%= gravatar_for @user %>-->
+            <!--<a href="http://gravatar.com/emails" target="_blank">change</a>-->
+            <!--</div>-->
+
+          </div>
+          <div class="col-md-6">
 
             <%= f.label :email %>
             <%= f.email_field :email, class: 'form-control' %>
 
-            <%= f.label :password %>
-            <%= f.password_field :password, class: 'form-control' %>
-
-            <%= f.label :password_confirmation, "Confirmation" %>
+            <%= f.label :password_confirmation, "Confirm Password" %>
             <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-            <%= f.submit "Save changes", class: "btn btn-primary" %>
-        <% end %>
 
-        <div class="gravatar_edit">
-          <%= gravatar_for @user %>
-          <a href="http://gravatar.com/emails" target="_blank">change</a>
-        </div>
-      </div>
+          </div>
+          <div class="col-md-12">
+            <%= f.submit "Save changes", class: "btn btn-primary" %>
+          </div>
+      <% end %>
     </div>
 
   </div>
@@ -78,11 +68,11 @@
 
     <div class="col-md-12">
       <% if @user.projects.any? %>
-          <h3>Projects (<%= @user.projects.count %>)</h3>
+          <!--<h3>Projects (<%= @user.projects.count %>)</h3>-->
           <ol class="projects">
             <%= render @projects %>
           </ol>
-          <%= will_paginate @projects %>
+          <%= will_paginate @projects , class: "text-center"%>
       <% end %>
     </div>
   </div>
