--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,13 @@
             $(".project-form").slideToggle();
         });
     });
+
+    $(document).on("ready page:change", function() {
+        $('.tip').tooltip();
+    });
 </script>
+
+
 
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
@@ -13,9 +19,9 @@
       <ul class="nav navbar-nav navbar-right">
 
         <% if logged_in? %>
-            <li><%= link_to image_tag("add.png"), "#", 'data-no-turbolink' => true, class: "toggle-form" %></li>
-            <% if current_user.admin? %><li><%= link_to image_tag("users.png"), users_path %></li><% end %>
-            <li><%= link_to image_tag("account.png"), current_user , 'data-no-turbolink' => true, class: "right-button-header" %></li>
+            <li><%= link_to image_tag("add.png"), "#", 'data-no-turbolink' => true, class: "toggle-form tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Add Project' %></li>
+            <% if current_user.admin? %><li><%= link_to image_tag("users.png"), users_path , class: "tip" ,'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Users'%></li><% end %>
+            <li><%= link_to image_tag("account.png"), current_user , 'data-no-turbolink' => true, class: "right-button-header tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Account Details' %></li>
         <% else %>
             <li><%= link_to image_tag("account.png"), login_path %></li>
         <% end %>
