--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,9 @@
  *= require_tree .
  *= require_self
  *= require bootsy
+ *= require bootstrap-datepicker3
  */
 /*
  *= require rails_bootstrap_forms
  */
+
