--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,8 +10,6 @@
     });
 </script>
 
-
-
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
            <%= link_to "college planner", root_path, id: "logo" , 'data-no-turbolink' => true %>
@@ -19,7 +17,15 @@
       <ul class="nav navbar-nav navbar-right">
 
         <% if logged_in? %>
-            <li><%= link_to image_tag("add.png"), "#", 'data-no-turbolink' => true, class: "toggle-form tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Add Project' %></li>
+
+            <% if current_page?(root_path) %>
+                <li><%= link_to image_tag("add.png"), "#", 'data-no-turbolink' => true, class: "toggle-form tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Add Project' %></li>
+            <% else %>
+                <li><%= link_to image_tag("add.png"), root_path, 'data-no-turbolink' => true, class: "toggle-form tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Add Project' %></li>
+           <% end %>
+            <li><%= link_to image_tag("add.png"), timetables_path, 'data-no-turbolink' => true, class: "tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'View Timetable' %></li>
+
+            <!--<li><%= link_to image_tag("add.png"), "#", 'data-no-turbolink' => true, class: "toggle-form tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Add Project' %></li>-->
             <% if current_user.admin? %><li><%= link_to image_tag("users.png"), users_path , class: "tip" ,'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Users'%></li><% end %>
             <li><%= link_to image_tag("account.png"), current_user , 'data-no-turbolink' => true, class: "right-button-header tip" , 'data-toggle' => 'tooltip', 'data-placement' => 'bottom',  title: 'Account Details' %></li>
         <% else %>
