--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,8 +42,8 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 3em;
   letter-spacing: -2px;
-  margin-bottom: 30px;
-  text-align: center;
+  margin-bottom: 20px;
+
 }
 
 h2 {
@@ -489,6 +489,13 @@ span.picture {
 
 .timetable-image{
 
+
+
+}
+
+.stats-text{
+
+  text-align: left;
 
 
 }
