--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,7 +10,7 @@
         </h1>
       </div>
       <div class="col-xs-8">
-        <!--<h1>{{numOfDealsToday.count}}</h1>-->
+       <h1 align="left"><%= @projects_today %></h1>
       </div>
     </div>
     <div class="row">
@@ -29,7 +29,7 @@
         </h1>
       </div>
       <div class="col-xs-8">
-        <!--<h1>{{numOfDeals.count}}</h1>-->
+       <h1><%= @total_projects %></h1>
       </div>
     </div>
     <div class="row">
@@ -49,7 +49,7 @@
           </h1>
         </div>
         <div class="col-xs-8">
-          <!--<h1>{{numOfUsersToday.count}}</h1>-->
+          <h1><%= @users_today %></h1>
         </div>
       </div>
       <div class="row">
@@ -68,7 +68,7 @@
           </h1>
         </div>
         <div class="col-xs-8">
-          <!--<h1>{{numOfUsers.count}}</h1>-->
+          <h1><%= @total_users %></h1>
         </div>
       </div>
       <div class="row">
@@ -77,6 +77,4 @@
         </div>
       </div>
     </div>
-
-
 </div>
