--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
       <head>
-        <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
+        <title>College Planner <%= yield(:title) %></title>
         <%= stylesheet_link_tag 'application', media: 'all',
                                                'data-turbolinks-track' => true %>
         <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -21,7 +21,10 @@
 
           <%= yield %>
           <%= render 'layouts/footer' %>    <!-- NEW LINE -->
-          <%= debug(params) if Rails.env.development? %>    <!--NEW LINE -->
+
+          <!--<%= debug(params) if Rails.env.development? %>   -->
+
+
         </div>
       </body>
     </html>
