Created mobile signup screen

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -95,7 +95,7 @@ footer {
   /*border-bottom: #eeeeee 20px solid;*/
   color: #FFFFFF;
   height: 280px;
-  width: 1140px;
+  //width: 1140px;
   margin: 0px auto;
   margin-top: 20px;
   margin-bottom: 20px;
