--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Sign up') %>
-    <h1>Sign up</h1>
+
+    <center><h1>Sign up</h1></center>
 
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
