--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,7 +15,7 @@ $gray-medium-light: #eaeaea;
 
 body {
   padding-top: 60px;
-  background-color: #fff;
+  background-color: #F7F7F7;
 }
 
 section {
@@ -422,6 +422,7 @@ span.picture {
   -moz-border-radius: 10px;
   border-radius: 10px;
   margin-top: 20px;
+  background-color: #FFFFFF;
 
 
 }
